@@ -52,6 +52,10 @@ CruiseControlController
 ----------------------
 * Reloads the config file if it has changed (CC-74). Contributions by Jerome Lacoste, Tangi Vass, and Jeffrey Fredrick
 
+CurrentBuildStatusBootstrapper/Publisher:
+----------------------
+* Add javadoc deprecated flag and a warning when they are created to indicate they have been made obsolete by CurrentBuildStatusListener. Patch by Jerome Lacoste.
+
 CVS:
 ----------------------
 * Add module attribute so it can work with no local working copy (CC-149). Patch by Lars Gehrken
